istio-configs-example/Delay_Example/VirtualService.yaml
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: helloworld
spec:
  hosts:
    - "*" # Copy the value in the Gateway hosts
  gateways:
    - helloworld/helloworld-gateway
  http:
    - fault:
        delay:
          fixedDelay: 7.000s
          percent: 50
      route:
        - destination:
            host: helloworld # The Service DNS name
            subset: app-helloworld # The name defined in the DestinationRule
